--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -1,8 +1,8 @@
 #conteudo{
     width: 1000px;
-}
-#conteudo{
-
+    background-color: #F1F1F1;
+    padding: 10px;
+    border-radius: 10px;
 }
 #conteudoDeEscolhas{
 
@@ -73,6 +73,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #fff;
     &:hover{
         cursor: pointer;
         background-color: #3b3b3b;
@@ -92,7 +93,7 @@
     margin: 30px 0;
 }
 .cadastrados{
-    background-color: #D9D9D9;
+    background-color: #adadad;
     border-radius: 5px;
     height: 40px;
     margin-bottom: 10px;
