--- a/components/cargoEditarNaoEncontrado/cargoEditarNaoEncontrado.module.css
+++ b/components/cargoEditarNaoEncontrado/cargoEditarNaoEncontrado.module.css
@@ -3,14 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 30px 0;
+}
+#conteudoPersonalizado{
+    padding: 15px 30px 0;
+}
+#caixaDasEntradasPersonalizada{
+    display: flex;
+    flex-direction: column;
 }
 #imgNaoEncontrado{
     width: 100px;
     height: 100px;
 }
 #textoNaoEncontrado{
-    margin-top: 30px;
+    margin-top: 15px;
+    padding-bottom: 15px;
+    text-align: left;
+    width: 100%;
 }
 #descricaoNaoEncontrado{
     color: red;
