--- a/components/filtroRelatorio/filtroRelatorio.module.css
+++ b/components/filtroRelatorio/filtroRelatorio.module.css
@@ -15,58 +15,41 @@
 #conteudo{
     padding: 30px;
 }
-#titulo{
-    padding-bottom: 15px;
+#botoesDeNavegacao{
+    margin-bottom: 15px;
 }
-#descricao{
-    padding-bottom: 30px;
-    color: #757575;
+.button{
+    border: none;
+    width: 200px;
+    padding: 12px 0;
+    color: #fff;
+    border-radius: 10px;
+    margin-right: 15px;
 }
-#caixaPrincipal{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 15px;
+#buttonVoltarHome{
+    background-color: #06C167;
+    &:hover{
+        background-color: #0d864c;
+        cursor: pointer;
+    }
+}
+#buttonIrFiltro{
+    background-color: #1E1E1E;
+    &:hover{
+        background-color: #505050;
+        cursor: pointer;
+    }
+}
+#caixaDeInformacoes{
     border-bottom: 1px solid #757575;
     margin-bottom: 15px;
 }
-#selection{
-    background-color: #1E1E1E;
-    height: 40px;
-    color: #fff;
-    border-radius: 10px;
-    border: none;
-    width: 300px;
-    margin-right: 15px;
-    padding: 0 15px;
+#tituloRelatorio{
+    margin-bottom: 15px;
 }
-#btnAplicarFiltro{
-    background-color: #06C167;
-    height: 40px;
-    border: none;
-    border-radius: 10px;
-    color: #fff;
-    width: 200px;
-    &:hover{
-        background-color: #149456;
-        cursor: pointer;
-    }
-}
-#ou{
-    font-size: 12px;
-    margin: 0 20px;
-}
-#btnImprimirRelatorio{
-    background-color: #06C167;
-    height: 40px;
-    border: none;
-    border-radius: 10px;
-    color: #fff;
-    padding: 0 100px;
-    &:hover{
-        background-color: #149456;
-        cursor: pointer;
-    }
+#descricaoRelatorio{
+    margin-bottom: 15px;
+    color: #5B5B5B;
 }
 #containerRelatorio{
     display: flex;
@@ -96,15 +79,15 @@
     display: flex;
     justify-content: flex-end;
 }
-#botaoAplicarFiltro{
-    border: none;
+#botaoImprimirRelatorio{
     width: 200px;
-    padding: 12px 0;
+    height: 40px;
     color: #fff;
+    border: none;
     border-radius: 10px;
-    background-color: #1E1E1E;
+    background-color: #06C167;
     &:hover{
-        background-color: #505050;
         cursor: pointer;
+        background-color: #05944f;
     }
 }
