--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -103,3 +103,54 @@
     align-items: center;
     font-size: 13px;
 }
+.imageImprimir{
+    width: 13px;
+    height: 13px;
+}
+.teste{
+    display: flex;
+    justify-content: space-between;
+    background-color: #adadad;
+    border-radius: 5px;
+    height: 40px;
+    margin-bottom: 10px;
+    color: #5B5B5B;
+    align-items: center;
+    font-size: 13px;
+    padding: 0 15px;
+}
+.caixaImprimirReceitas{
+    font-size: 11px;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #06C167;
+    width: 150px;
+    color: #fff;
+    padding: 7px 0;
+    border-radius: 10px;
+    &:hover{
+        background-color: #0a9250;
+        cursor: pointer;
+    }
+}
+#caixaPersonalizadaReceitas{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#caixaImprimiReceitas{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #1E1E1E;
+    height: 40px;
+    width: 250px;
+    color: #fff;
+    font-size: 13px;
+    border-radius: 10px;
+    &:hover{
+        background-color: #353535;
+        cursor: pointer;
+    }
+}
