--- a/styles/padroes.module.css
+++ b/styles/padroes.module.css
@@ -1,29 +1,24 @@
 #container{
     width: 1000px;
     height: 460px;
-    
+    background-color: #f1f1f1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-#subContainer{
-    box-sizing: border-box;
-    padding: 30px;
-}
-#primeiroConteudo{
+#conteudo{
     padding: 30px;
 }
 #indicacao{
     text-align: center;
     color: #fff;
     padding: 10px;
+    background-color: #06C167;
 }
-#indicacao{
+#indicacaoExcluir{
     text-align: center;
     color: #fff;
     padding: 10px;
-}
-.indicacaoExcluir{
     background-color: #F32323;
 }
 .indicacaoCargo{
@@ -55,33 +50,35 @@
     border-radius: 10px;
     padding-left: 15px;
 }
-#caixaDeBotoes{
-    box-sizing: border-box;
+#segundoContainer{
     padding: 30px;
+}
+#caixaDosBotoes{
     display: flex;
     justify-content: space-between;
 }
-#botao{
+#botaoCargo{
     width: 200px;
     height: 40px;
     color: #fff;
     border: none;
     border-radius: 10px;
-    &:hover{
-        cursor: pointer;
-    }
-}
-.botaoCargo{
     background-color: #06C167;
     &:hover{
         cursor: pointer;
         background-color: #056335;
     }
 }
-.botaoExcluirCargo{
+#botaoCargoExcluir{
+    width: 200px;
+    height: 40px;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
     background-color: #F32323;
     &:hover{
         background-color: #b41b1b;
+        cursor: pointer;
     }
 }
 #botaoVoltar{
@@ -105,7 +102,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    margin: 0 auto;
+    margin: 50px auto 0;
 }
 #containerSucesso{
     height: 460px;
