--- a/components/menuLateralCozinheiro/menuLateralCozinheiro.module.css
+++ b/components/menuLateralCozinheiro/menuLateralCozinheiro.module.css
@@ -1,11 +1,11 @@
 #headerMain {
-  background-color: #000;
-  width: 18%;
-  height: 100vh;
-  border-top-right-radius: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    background-color: #000;
+    width: 18%;
+    height: 100vh;
+    border-top-right-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 #tituloEmpresa {
   color: #06c167;
@@ -57,13 +57,13 @@
   font-size: 13px;
   color: #FFFFFF;
 }
-#emialInformacao{
+#emailInformacao{
   font-size: 13px;
   color: #06C167;
   margin-top: 10px;
 
 }
-#bntSair{
+#btnSair{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -72,4 +72,8 @@
   height: 40px;
   color: #000;
   border: none;
+  &:hover{
+    background-color: #a7a7a7;
+    cursor: pointer;
+  }
 }
